# labs

./: system_info  system_info.cpp.save
DHCPStarvationDefend/: dhcpig.script  yersinia.script
Softlab1/: system_info.cpp
Softlab2/: rle
Softlab3/: LicensingSystem1
Softlab3/LicensingSystem/: CMakeLists.txt
Softlab3/LicensingSystem/include/: HardwareID.h  LicenseKey.h  LicenseManager.h
Softlab3/LicensingSystem/src/: HardwareID.cpp  LicenseKey.cpp  LicenseManager.cpp  main.cpp
lab1/: system_info.sh
lab2/: rle.cpp
